pkg/gox/testdata/errors/invalid_component.gox
package demo

func View() any {
	return <Bad-Name />
}
